--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Asap";
+  src: url("../assets/fonts/Asap-Regular.ttf");
+  src: local("Asap"), local("Asap");
+}
+
 *,
 *::before,
 *::after {
@@ -56,11 +62,9 @@ a {
 .logo {
   display: flex;
   align-items: center;
-  background-color: #696969;
-  /* flex-grow: 1; */
   color: white;
   text-shadow: 2px 2px #000;
-  padding: 11px 12px 12px 18px;
+  padding: 11px 16px 12px 18px;
   height: inherit;
   width: 186px;
   background: linear-gradient(
@@ -74,6 +78,8 @@ a {
 
 .logo img {
   margin-right: auto;
+  width: 35px;
+  height: 35px;
 }
 
 .nav-item {
@@ -261,4 +267,229 @@ footer span {
   text-shadow: 2px 2px #000;
   font-style: italic;
   font-family: "Lucida", Geneva, Verdana, sans-serif;
+}
+
+.desktop {
+  display: none;
+}
+
+@media screen and (min-width: 1300px) {
+  .desktop {
+    display: unset;
+  }
+  .mobile {
+    display: none;
+  }
+
+  .nav_links {
+    margin-top: 48px;
+    box-shadow: -4px -5px 0px 0px rgba(173, 153, 44, 0.75),
+      -8px -8px 0px 0px rgba(166, 142, 62, 0.55);
+    max-width: 453px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 41px;
+  }
+
+  header {
+    padding-top: 23px;
+    box-shadow: inset 0px -4px 6px -1px rgba(0, 0, 0, 0.5);
+    background: url(../assets/img/banner.jpg) no-repeat center top / cover;
+  }
+
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1020px;
+    margin: 0 auto;
+  }
+
+  .logo {
+    background: none;
+    padding: 0;
+  }
+
+  h1 {
+    font-size: 41px;
+    margin-top: 14px;
+  }
+
+  #ipsum {
+    box-shadow: inset 0px 3px 4px -1px rgba(0, 0, 0, 0.4);
+    padding: 32px 0 115px;
+    background: url(../assets/img/yellow-bg.jpg) no-repeat center top / cover;
+  }
+
+  .logo img {
+    width: auto;
+    height: auto;
+  }
+
+  #vidplayer {
+    max-width: 1020px;
+    margin: 0 auto;
+    padding: 55px 10px 72px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .arrow {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 30px;
+    height: 57px;
+    top: 300px;
+    background-color: #c4a00b;
+  }
+
+  .arrow:hover,
+  .arrow:active {
+    background-color: #f5c506;
+  }
+
+  .offer__title {
+    max-width: 419px;
+    font-size: 63px;
+    font-family: "Asap";
+    text-align: center;
+    letter-spacing: 0.01em;
+    color: #f5c506;
+    font-weight: normal;
+    margin: 0;
+    margin-bottom: 25px;
+    text-transform: uppercase;
+    line-height: 1.25em;
+  }
+
+  .offer__title span {
+    color: #fff;
+  }
+
+  #three-icons {
+    padding-top: 36px;
+    padding-bottom: 30px;
+    padding-left: 200px;
+    padding-right: 200px;
+  }
+
+  .ipsum__title {
+    display: block;
+    max-width: 1020px;
+    margin: 0 auto;
+    font-family: "PT Sans";
+    font-size: 37px;
+    font-weight: normal;
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+  }
+
+  #platforms div {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  #platforms div img {
+    margin: 0;
+  }
+
+  .nav-item a {
+    padding-top: 14px;
+    padding-bottom: 10px;
+  }
+
+  #platforms ul {
+    list-style-type: none;
+  }
+
+  #platforms li {
+    margin-bottom: 15px;
+    line-height: 1.25em;
+    display: flex;
+    align-items: center;
+    color: #a9a9a7;
+    font-size: 22px;
+    font-family: "Open Sans";
+  }
+
+  #platforms li p {
+    max-width: 350px;
+  }
+
+  #platforms li:before {
+    margin-right: 15px;
+    display: block;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background: #f5c506;
+    content: "";
+  }
+
+  #platforms div span {
+    left: 112px;
+  }
+
+  .slider {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .slider__first {
+    width: unset;
+    position: relative;
+  }
+  .slider__second {
+    min-width: 150px;
+    background: #ec9e03;
+    width: 330px;
+    height: 232px;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding-top: 0;
+  }
+
+  .slider__second:before {
+    content: "22";
+    color: #fff;
+    margin-left: auto;
+    margin-top: 10px;
+    margin-right: 20px;
+    font-size: 25px;
+    font-weight: 100;
+  }
+  .plus {
+    cursor: pointer;
+  }
+
+  .slider_twit .plus {
+    margin-left: auto;
+    margin-right: 10px;
+    margin-top: 20px;
+  }
+
+  .slider__data {
+    background: #ddb101;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 112px;
+    height: 88px;
+    top: 242px;
+    left: 10px;
+  }
+
+  .scroll {
+    display: block;
+    margin: 0 auto;
+    margin-top: 115px;
+    margin-bottom: -95px;
+    cursor: pointer;
+  }
 }
